ChangeLog for herdstat

2005-04-01 Aaron Walker <ka0ttic@gentoo.org>

	* src/action_meta_handler.cc: Instead of throwing an instance of
	args_usage_E if -m is specified w/no non-opt args, print a message
	telling the user they must be in a package directory or category.
	Added a few comments.

2005-03-31 Aaron Walker <ka0ttic@gentoo.org>

	* src/categories.hh: Added new categories_T class.
	* src/metadatas.cc: Modified to use new categories_T.
	* src/action_meta_handler.cc: Display ebuild's DESCRIPTION and
	HOMEPAGE even if no metadata.xml exists.  Allow user to run 'herdstat
	-m' with no non-opt args *IF* in a package directory or category.
	* src/exceptions.hh: Added errno_error_E and modified bad_fileobject_E
	to derive from it.
	* src/util.cc, src/util.hh: Added getcwd(). Moved get_categories() to
	it's own categories_T class.

2005-03-30 Aaron Walker <ka0ttic@gentoo.org>

	* doc/herdstat.1.in, bashcomp: Added --with-herd.
	* src/util.cc, src/util.hh: Added a generic get_var() for retrieving
	variables from files using rcfile_T. Modified portdir() to use it.
	Added ebuild_which() which haphazardly tries to determine the latest
	ebuild of a package (does a crappy job).  I'll write a real version
	parser if 100% accuracy is needed.  Added get_ebuild_var() which uses
	get_var() to retrieve a variable value from an ebuild.
	* src/action_meta_handler.cc: Modified to show ebuild DESCRIPTION if
	metadata longdesc is non-existent. Also show HOMEPAGE if non-empty.
	* src/herdstat.cc: Catch std::runtime_error when trying to set a non-C
	locale, print an error, and exit.
	* src/options.cc, src/herdstat.cc, src/action_pkg_handler.cc: Added a
	--with-herd option, a generalization of --no-herd.  --no-herd will be
	kept around and will be considered shorthand for --with-herd=no-herd.

2005-03-27 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Updated version (1.0.1-release).
	* doc/herdstat.1.in, bashcomp: Updated for --metadata and --no-herd.