@@ -4,8 +4,10 @@ ChangeLog file for a more detailed listing of changes/bug fixes.
 1.0.2:
     New features:
      - --metadata now shows the package's HOMEPAGE (if it exists in the
-       ebuild).  Also shows the ebuild's DESCRIPTION if a longdesc is
-       unavailable in metadata.xml.
+       ebuild).  herdstat does it's best to try and perform variable
+       substituion on any variable occurrences in HOMEPAGE in an attempt to
+       improve readability. Also shows the ebuild's DESCRIPTION if a longdesc
+       is unavailable in metadata.xml.
      - Added --with-herd, a generalization of --no-herd (which is now
        shorthand for --with-herd=no-herd) for only displaying developer's
        packages that belong in the specified herd.
@@ -19,9 +21,10 @@ ChangeLog file for a more detailed listing of changes/bug fixes.
 1.0.1:
     New features:
      - New --metadata option that displays metadata information for the
-       specified package(s)/category(s).  Blame Obz for this.
+       specified package(s)/category(s).  Blame Obz for wanting this.
      - New --no-herd option that when specified with --package --dev only
-       shows packages belong to herd "no-herd".
+       shows packages belong to herd "no-herd". Blame ciaranm for wanting
+       this.
 
     Bug fixes:
      - package handler quirks fixed wrt to stuff that doesnt exist.
