@@ -2,10 +2,17 @@ ChangeLog for herdstat
 
 2005-04-01 Aaron Walker <ka0ttic@gentoo.org>
 
+	* src/util.cc, src/util.hh: Modified get_ebuild_var() to handle
+	HOMEPAGE specially, doing variable substituion in an attempt to
+	produce readable HOMEPAGE output.  Also added a plural version of
+	get_var(), get_vars() since it's not practical to open the same file
+	many times.
 	* src/action_meta_handler.cc: Instead of throwing an instance of
 	args_usage_E if -m is specified w/no non-opt args, print a message
 	telling the user they must be in a package directory or category.
 	Added a few comments.
+	* src/action_pkg_handler.cc: Fixed bug where first package was
+	displayed w/no color while the rest were blue when --verbose.
 
 2005-03-31 Aaron Walker <ka0ttic@gentoo.org>
 
